--- a/price.html
+++ b/price.html
@@ -20,7 +20,7 @@
 		  <div class="navbar-header">
 			<!-- Button for smallest screens -->
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-			<a class="navbar-brand" href="index.php">
+			<a class="navbar-brand" href="index.php" style="margin-top: auto;">
 			  <img src="assets/images/logo.png"></a>
 		  </div>
 		  <div class="navbar-collapse collapse">
@@ -226,9 +226,9 @@ Common achievement tests used to diagnose a learning disability include the Wood
                          <h4>Contact</h4> 
                         <br>
             <div class="contact-info"> 
-            <i class="fa fa-map-marker"></i> &nbsp&nbspMumbai, Maharashtra - India<br><br>
-            <i class="fa fa-phone"></i> &nbsp&nbsp+91 7045489328 <br><br>
-             <i class="fa fa-envelope-o"></i>&nbsp&nbspaunshumansaha9@gmail.com<br>
+            <i class="fa fa-map-marker"></i><a href="https://goo.gl/maps/cXfNWMLYgjNaZz4GA"> &nbsp&nbspMumbai, Maharashtra - India</a><br><br>
+            <i class="fa fa-phone"></i><a href="callto:917045489328"> &nbsp&nbsp+91 7045489328 </a><br><br>
+             <i class="fa fa-envelope-o"></i><a href="mailto:aunshumansaha9@gmailcom">&nbsp&nbspaunshumansaha9@gmail.com</a><br>
               </div> 
                 </div><!-- end widget --> 
     </div>
@@ -252,7 +252,7 @@ Common achievement tests used to diagnose a learning disability include the Wood
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="simplenav">
-								<a href="index.html">Home</a> | 
+								<a href="index.php">Home</a> | 
 								<a href="about.html">About</a> |
 								<a href="courses.html">Courses</a> |
 								<a href="price.html">Quiz</a> |
