--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About US</title>
+    <title>About Us</title>
     <link rel="favicon" href="assets/images/favicon.png">
     <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -19,7 +19,7 @@
 		  <div class="navbar-header">
 			<!-- Button for smallest screens -->
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-			<a class="navbar-brand" href="index.php">
+			<a class="navbar-brand" href="index.php" style="margin-top: auto;">
 			  <img src="assets/images/logo.png"></a>
 		  </div>
 		  <div class="navbar-collapse collapse">
@@ -151,7 +151,7 @@
         </div>
     </section>
     <!-- /container -->
-    <section class="team-content">
+    <section class="team-content" id="team">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -308,9 +308,9 @@
                          <h4>Contact</h4> 
                         <br>
             <div class="contact-info"> 
-            <i class="fa fa-map-marker"></i> &nbsp&nbspMumbai, Maharashtra - India<br><br>
-            <i class="fa fa-phone"></i> &nbsp&nbsp+91 7045489328 <br><br>
-             <i class="fa fa-envelope-o"></i>&nbsp&nbspaunshumansaha9@gmail.com<br>
+            <i class="fa fa-map-marker"></i><a href="https://goo.gl/maps/cXfNWMLYgjNaZz4GA"> &nbsp&nbspMumbai, Maharashtra - India</a><br><br>
+            <i class="fa fa-phone"></i><a href="callto:917045489328"> &nbsp&nbsp+91 7045489328 </a><br><br>
+             <i class="fa fa-envelope-o"></i><a href="mailto:aunshumansaha9@gmailcom">&nbsp&nbspaunshumansaha9@gmail.com</a><br>
               </div> 
                 </div><!-- end widget --> 
     </div>
@@ -334,7 +334,7 @@
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="simplenav">
-								<a href="index.html">Home</a> | 
+								<a href="index.php">Home</a> | 
 								<a href="about.html">About</a> |
 								<a href="courses.html">Courses</a> |
 								<a href="price.html">Quiz</a> |
