--- a/videos.html
+++ b/videos.html
@@ -15,11 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/isotope.css" media="screen" />
 	<link rel="stylesheet" href="assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="assets/css/style.css">
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
-	<![endif]-->
+
 </head>
 
 <body>
@@ -29,8 +25,8 @@
 		  <div class="navbar-header">
 			<!-- Button for smallest screens -->
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-			<a class="navbar-brand" href="index.php">
-			  <img src="assets/images/logo.png" alt="Techro HTML5 template"></a>
+			<a class="navbar-brand" href="index.php" style="margin-top: auto;">
+			  <img src="assets/images/logo.png"></a>
 		  </div>
 		  <div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav pull-right mainNav">
@@ -330,9 +326,9 @@
                          <h4>Contact</h4> 
                         <br>
             <div class="contact-info"> 
-            <i class="fa fa-map-marker"></i> &nbsp&nbspMumbai, Maharashtra - India<br><br>
-            <i class="fa fa-phone"></i> &nbsp&nbsp+91 7045489328 <br><br>
-             <i class="fa fa-envelope-o"></i>&nbsp&nbspaunshumansaha9@gmail.com<br>
+          <i class="fa fa-map-marker"></i><a href="https://goo.gl/maps/cXfNWMLYgjNaZz4GA"> &nbsp&nbspMumbai, Maharashtra - India</a><br><br>
+            <i class="fa fa-phone"></i><a href="callto:917045489328"> &nbsp&nbsp+91 7045489328 </a><br><br>
+             <i class="fa fa-envelope-o"></i><a href="mailto:aunshumansaha9@gmailcom">&nbsp&nbspaunshumansaha9@gmail.com</a><br>
               </div> 
                 </div><!-- end widget --> 
     </div>
@@ -356,7 +352,7 @@
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="simplenav">
-								<a href="index.html">Home</a> | 
+								<a href="index.php">Home</a> | 
 								<a href="about.html">About</a> |
 								<a href="courses.html">Courses</a> |
 								<a href="price.html">Quiz</a> |
